--- a/about.html
+++ b/about.html
@@ -159,7 +159,7 @@
 </div>
 </div>
 <footer class="footer">
-    <div class="container-fluid custom-container-fluid">
+    <div class="container-fluid custom-container-fluid-section">
 
         <ul class="nav nav-pills">
             <li role="presentation"><a href="https://twitter.com/intent/follow?&screen_name=midgardmc"><i
@@ -185,7 +185,8 @@
         </ul>
         <p style="padding-left: 10px">Midgard is supported through the funds of the community. If you would like to
             donate contact <a style="color: black" href="https://twitter.com/NgtFlyer">NgtFlyer.</a></p>
-        <p style="padding-left: 10px">Builds featured in screenshots were constructed by Legida, NgtFlyer and NullMatrix</p>
+        <p style="padding-left: 10px">Builds featured in screenshots were constructed by Legida, NgtFlyer and
+            NullMatrix</p>
     </div>
 </footer>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
