--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         </div>
     </div>
     <footer class="footer">
-        <div class="container-fluid custom-container-fluid">
+        <div class="container-fluid custom-container-fluid-section">
 
             <ul class="nav nav-pills">
                 <li role="presentation"><a href="https://twitter.com/intent/follow?&screen_name=midgardmc"><i
