--- a/rules.html
+++ b/rules.html
@@ -322,7 +322,7 @@
     </div>
     <!-- /top-link-block -->
     <footer class="footer">
-        <div class="container-fluid custom-container-fluid">
+        <div class="container-fluid custom-container-fluid-section">
 
             <ul class="nav nav-pills">
                 <li role="presentation"><a href="https://twitter.com/intent/follow?&screen_name=midgardmc"><i
