--- a/events.html
+++ b/events.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="We build nice things!">
     <meta name="author" content="Midgard">
-    <title>Midgard - About</title>
+    <title>Midgard - Events</title>
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
@@ -30,7 +30,9 @@
                 margin-top: auto !important;
             }
         }
-
+        .col-md-4 {
+            padding-top: 0px;
+        }
     </style>
 </head>
 <body>
@@ -68,93 +70,12 @@
     </div><!--/.container-fluid -->
 </nav>
 <div class="container-fluid custom-container-fluid">
-    <h1>About</h1>
+    <h1>Events</h1>
     <section>
-        <p>Midgard is an enhanced vanilla whitelist survival server with heavy emphasis on community. We have been
-            around for five years and we pride ourselves on providing our players with a fast, large server to play on.
-            While we cater to the mature, seasoned player, our server is family-safe.
-            "We build nice things!"</p>
-    </section>
-    <section>
-        <div id="myCarousel" class="carousel slide" data-ride="carousel">
-            <!-- Indicators -->
-            <ol class="carousel-indicators">
-                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                <li data-target="#myCarousel" data-slide-to="1"></li>
-                <li data-target="#myCarousel" data-slide-to="2"></li>
-                <li data-target="#myCarousel" data-slide-to="3"></li>
-            </ol>
-
-            <!-- Wrapper for slides -->
-            <div class="carousel-inner" role="listbox">
-                <div class="item active">
-                    <img src="images/showcase_gallery_images/showcase1.png" alt="Images 1" width="460" height="345">
-                </div>
-
-                <div class="item">
-                    <img src="images/showcase_gallery_images/showcase2.png" alt="Image 2" width="460" height="345">
-                </div>
-
-                <div class="item">
-                    <img src="images/showcase_gallery_images/showcase3.png" alt="Image 3" width="460" height="345">
-                </div>
-
-                <div class="item">
-                    <img src="images/showcase_gallery_images/showcase4.png" alt="Image 4" width="460" height="345">
-                </div>
-            </div>
-
-            <!-- Left and right controls -->
-            <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
+        <div class="row" style="border-bottom-style: solid;">
+            <div class="col-md-4"><h1>July</h1><h2>2016</h2></div>
+            <div class="col-md-8"><h3>Fireworks Show</h3><p>This event is still <strong>pending</strong>.</p></div>
         </div>
-    </section>
-    <section>
-        <h2>The Team</h2>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-4"><img src="https://minotar.net/avatar/ngtflyer/100.png" alt="ngtflyer"
-                                           class="img-rounded">
-                    <h4>NgtFlyer</h4>
-                </div>
-                <div class="col-md-4"><img src="https://minotar.net/avatar/nullmatrix/100.png" alt="nullmatrix"
-                                           class="img-rounded">
-                    <h4>NullMatrix</h4></div>
-                <div class="col-md-4"><img src="https://minotar.net/avatar/spinnibbler/100.png" alt="spinnibbler"
-                                           class="img-rounded">
-                    <h4>SpinNibbler</h4>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-4"><img src="https://minotar.net/avatar/vantes/100.png" alt="vantes"
-                                           class="img-rounded">
-                    <h4>Vantes</h4>
-                </div>
-                <div class="row">
-                    <div class="col-md-4"><img src="https://minotar.net/avatar/VanDerProtofsky/100.png"
-                                               alt="VanDerProtofsky"
-                                               class="img-rounded">
-                        <h4>VanDerProtofsky</h4>
-                    </div>
-    </section>
-    <h2>Servers</h2>
-    <section>
-        <h3>Minecraft</h3>
-        <p>Connection Info </p>
-        <p><code>mc.midgardmc.com</code></p>
-    </section>
-    <section>
-        <h3>TF2</h3>
-        <p>We have a TF2 server too! It is open for you and any of your friends to come play on. Over 40 great maps are
-            in the rotation. </p>
-        <p>Connection Info </p>
-        <p><code>tf2.midgardmc.com Password: multipass</code></p>
     </section>
 </div>
 </div>
