--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <li><a href="./about.html">About</a></li>
                     <li><a href="./rules.html">Rules</a></li>
                     <!--<li><a href="./">Forums</a></li>-->
-                    <li><a href="http://mc.midgardmc.com:8123/">DynMap</a></li>
+                    <li><a href="./dynmap.html">DynMap</a></li>
                     <li>
                         <button class="btn navbar hideonmobile"
                                 style="background: none; margin-top: 0px !important; padding-bottom: 0px !important; padding-top: 0px !important;"
@@ -102,6 +102,9 @@
             <ul class="nav nav-pills">
                 <li role="presentation"><a href="https://twitter.com/intent/follow?&screen_name=midgardmc"><i
                         class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
+                </li>
+                <li role="presentation"><a href="https://www.reddit.com/r/MidgardMC/"><i
+                        class="fa fa-reddit-alien fa-2x" aria-hidden="true"></i></a>
                 </li>
                 <li role="presentation"><a href="mumble://mc.midgardmc.com?title=Root&version=1.2.0"><i
                         class="fa fa-headphones fa-2x" aria-hidden="true"></i></a>
