--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="We build nice things!">
     <meta name="author" content="Midgard">
+    <!-- Twitter Card data-->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@midgardmc">
+    <meta name="twitter:title" content="Midgard">
+    <meta name="twitter:description" content="We build nice things!">
+    <meta name="twitter:creator" content="@midgardmc">
     <title>Midgard - We build nice things!</title>
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
