--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta name="twitter:title" content="Midgard">
     <meta name="twitter:description" content="We build nice things!">
     <meta name="twitter:creator" content="@midgardmc">
+    <meta name="twitter:image" content="../images/social_media/socialmedia.jpg">
     <title>Midgard - We build nice things!</title>
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
