--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
     <meta name="twitter:description" content="We build nice things!">
     <meta name="twitter:creator" content="@midgardmc">
     <meta name="twitter:image" content="http://www.midgardmc.com/images/social_media/socialmedia.jpg">
+    <!-- Open Graph data -->
+    <meta property="og:title" content="Midgard" />
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="http://www.midgardmc.com/" />
+    <meta property="og:image" content="http://www.midgardmc.com/images/social_media/socialmedia.jpg" />
+    <meta property="og:description" content="We build nice things!" />
+    <!-- CSS and Title -->
     <title>Midgard - We build nice things!</title>
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
