--- a/events.html
+++ b/events.html
@@ -8,6 +8,19 @@
     <meta name="description" content="We build nice things!">
     <meta name="author" content="Midgard">
     <title>Midgard - Events</title>
+    <!-- Twitter Card data-->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@midgardmc">
+    <meta name="twitter:title" content="Midgard Events">
+    <meta name="twitter:description" content="The Annual 4th of July Fireworks show is here!">
+    <meta name="twitter:creator" content="@midgardmc">
+    <meta name="twitter:image" content="http://www.midgardmc.com/images/social_media/events/4thofjuly.jpg">
+    <!-- Open Graph data -->
+    <meta property="og:title" content="Midgard" />
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="http://www.midgardmc.com/" />
+    <meta property="og:image" content="http://www.midgardmc.com/images/social_media/socialmedia.jpg" />
+    <meta property="og:description" content="We build nice things!" />
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
