Image change and SEO

--- a/about.html
+++ b/about.html
@@ -7,6 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="We build nice things!">
     <meta name="author" content="Midgard">
+    <!-- Twitter Card data-->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@midgardmc">
+    <meta name="twitter:title" content="Midgard">
+    <meta name="twitter:description" content="We build nice things!">
+    <meta name="twitter:creator" content="@midgardmc">
+    <meta name="twitter:image" content="http://www.midgardmc.com/images/social_media/socialmedia.jpg">
+    <!-- Open Graph data -->
+    <meta property="og:title" content="Midgard" />
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="http://www.midgardmc.com/" />
+    <meta property="og:image" content="http://www.midgardmc.com/images/social_media/socialmediaalt.jpg" />
+    <meta property="og:description" content="We build nice things!" />
     <title>Midgard - About</title>
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
