--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="We build nice things!">
     <meta name="author" content="Midgard">
     <!-- Twitter Card data-->
-    <meta name="twitter:card" content="summary">
+    <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@midgardmc">
     <meta name="twitter:title" content="Midgard">
     <meta name="twitter:description" content="We build nice things!">
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Midgard" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="http://www.midgardmc.com/" />
-    <meta property="og:image" content="http://www.midgardmc.com/images/social_media/socialmedia.jpg" />
+    <meta property="og:image" content="http://www.midgardmc.com/images/social_media/socialmediaalt.jpg" />
     <meta property="og:description" content="We build nice things!" />
     <!-- CSS and Title -->
     <title>Midgard - We build nice things!</title>
