Twitter card enhancements

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <!-- Twitter Card data-->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@midgardmc">
-    <meta name="twitter:title" content="Midgard">
-    <meta name="twitter:description" content="We build nice things!">
+    <meta name="twitter:title" content="Midgard | We build nice things!">
+    <meta name="twitter:description" content="Midgard is a great place for me to get away from the stresses of college. -GeoPMel">
     <meta name="twitter:creator" content="@midgardmc">
     <meta name="twitter:image" content="http://www.midgardmc.com/images/social_media/twittercard-july.jpg">
     <!-- Open Graph data -->
