--- a/dynmap.html
+++ b/dynmap.html
@@ -21,9 +21,11 @@
         html, body {
             width: 100%;
             margin: 0;
+            pointer-events: none;
         }
 
         iframe {
+            z-index: -99;
             border: none;
             position: absolute;
             top: 0;
@@ -32,14 +34,22 @@
             bottom: 0;
             width: 100%;
             height: 100%;
+            pointer-events: initial
+        }
+
+        button, a{
+            pointer-events: initial
         }
         .navbar-default .navbar-nav>li>a:focus, .navbar-default .navbar-nav>li>a:hover {
             background-color: white;
         }
+
     </style>
 </head>
 <body>
 <iframe src="http://mc.midgardmc.com:8123"></iframe>
+</div>
+<div class="background-gradient">
 </div>
 <div class="centered">
     <nav class="navbar navbar-default">
@@ -63,7 +73,7 @@
         </div><!--/.container-fluid -->
     </nav>
 </div>
-<div class="container-fluid">
+<div class="container-fluid showonmobile">
     <p id="iframealert">Due to limitations with mobile please open DynMap in its own tab for an optimal experience.</p>
     <a class="btn btn-default btn-xs" target="_blank" href="http://mc.midgardmc.com:8123" role="button">Open in new
         tab.</a>
