--- a/dynmap.html
+++ b/dynmap.html
@@ -7,6 +7,27 @@
     <meta name="description" content="We build nice things!">
     <meta name="author" content="Midgard">
     <title>Midgard - We build nice things!</title>
+    <!-- Twitter Card data-->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@midgardmc">
+    <meta name="twitter:title" content="Midgard | We build nice things!">
+    <meta name="twitter:description"
+          content="Midgard is a great place for me to get away from the stresses of college. -GeoPMel">
+    <meta name="twitter:creator" content="@midgardmc">
+    <meta name="twitter:image" content="http://www.midgardmc.com/images/social_media/twittercard-july.jpg">
+    <!-- Open Graph data -->
+    <meta property="og:title" content="Midgard"/>
+    <meta property="og:type" content="article"/>
+    <meta property="og:url" content="http://www.midgardmc.com/"/>
+    <meta property="og:image" content="http://www.midgardmc.com/images/social_media/socialmediaalt.jpg"/>
+    <meta property="og:description" content="We build nice things!"/>
+    <!-- Fav Icons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="./images/icons/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="./images/icons/favicons/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="./images/icons/favicons/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="./images/icons/favicons/manifest.json">
+    <link rel="mask-icon" href="./images/icons/favicons/safari-pinned-tab.svg" color="#000000">
+    <meta name="theme-color" content="#ffffff">
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
