--- a/events/fireworksjuly2016.html
+++ b/events/fireworksjuly2016.html
@@ -10,9 +10,8 @@
     <!-- Twitter Card data-->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@midgardmc">
-    <meta name="twitter:title" content="Midgard | We build nice things!">
-    <meta name="twitter:description"
-          content="Midgard is a great place for me to get away from the stresses of college. -GeoPMel">
+    <meta name="twitter:title" content="Midgard Events">
+    <meta name="twitter:description" content="Enjoy a night filled with fun, color and celebration! It's the 3rd Annual Midgard Fireworks!">
     <meta name="twitter:creator" content="@midgardmc">
     <meta name="twitter:image" content="http://www.midgardmc.com/images/social_media/events/4thofjuly.jpg">
     <!-- Open Graph data -->
