--- a/events/fireworksjuly2016.html
+++ b/events/fireworksjuly2016.html
@@ -81,7 +81,7 @@
 </nav>
 <div class="container-fluid custom-container-fluid">
     <h1>Fireworks Show</h1>
-    <h2 class="noletterspacing" style="font-size: 20px;">4 July 2016 - After 10PM EST</h2>
+    <h2 class="noletterspacing" style="font-size: 20px;">6,7 July 2016 - 8:30 PM EST</h2>
     <section>
         <p>Enjoy a night filled with fun, color and celebration! It's the 3rd Annual Midgard Fireworks!</p>
         <p>Enjoy a 20-25 min show filled with a wide array of fireworks.</p> This event will be taking place behind the
@@ -89,8 +89,8 @@
             school.</a> </p>
     </section>
     <section>
-        <h3 class="noletterspacing">Fireworks Show - Images</h3>
-        <p>Check back here and the subreddit for photos from the event!</p>
+        <h3 class="noletterspacing">Event Media</h3>
+        <p>Check back here and the subreddit for media from the event!</p>
     </section>
 </div>
 </div>
