--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
     </style>
 </head>
 <body>
+<div class="alert alert-danger alert-dismissible fade in" role="alert">
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span>
+    </button>
+    <strong>Alert!</strong> Midgard is currently down. Current estimated downtime is unknown.
+</div>
 <div class="background"></div>
 <div class="background-gradient">
 </div>
@@ -80,7 +85,6 @@
             </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
     </nav>
-    <!--<div class="alert alert-danger" role="alert" style="margin: 0 auto; width: 800px;margin-bottom: -50px;"><strong>Alert!</strong></div>-->
     <div class="container-fluid custom-container-fluid">
         <div class="quote-box">
             <div class="quote">
