--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
                     <li><a href="./events">Events <sup>Alpha</sup></a></li>
                     <li><a href="./rules.html">Rules</a></li>
                     <li><a href="./dynmap.html">DynMap</a></li>
+                    <li><a href="./status.html">Status</a></li>
                     <li>
                         <button class="serverurl hideonmobile"
                                 style=" border-style: none; background: none; margin: 0px !important; padding: 0px !important; color: #337ab7;"
