Removed Events pages

--- a/about.html
+++ b/about.html
@@ -149,9 +149,9 @@
             <div class="col-md-7">
                 <ul>
                     <li><a href="./about.html">About</a></li>
-                    <li><a href="./events">Events <sup>Alpha</sup></a></li>
                     <li><a href="./rules.html">Rules</a></li>
                     <li><a href="./dynmap.html">DynMap</a></li>
+                    <li><a href="./status.html">Status</a></li>
                     <li>
                         <button class="serverurl hideonmobile"
                                 style=" border-style: none; background: none; margin: 0px !important; padding: 0px !important; color: #337ab7;"
