--- a/status.html
+++ b/status.html
@@ -11,9 +11,10 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@midgardmc">
     <meta name="twitter:title" content="Midgard Events">
-    <meta name="twitter:description" content="Enjoy a night filled with fun, color and celebration! It's the 3rd Annual Midgard Fireworks!">
+    <meta name="twitter:description"
+          content="Midgard is a great place for me to get away from the stresses of college. -GeoPMel">
     <meta name="twitter:creator" content="@midgardmc">
-    <meta name="twitter:image" content="http://www.midgardmc.com/images/social_media/events/4thofjuly.jpg">
+    <meta name="twitter:image" content="http://www.midgardmc.com/images/social_media/twittercard-july.jpg">
     <!-- Open Graph data -->
     <meta property="og:title" content="Midgard"/>
     <meta property="og:type" content="article"/>
