--- a/status.html
+++ b/status.html
@@ -10,11 +10,11 @@
     <!-- Twitter Card data-->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@midgardmc">
-    <meta name="twitter:title" content="Midgard Events">
+    <meta name="twitter:title" content="Midgard | Server Status">
     <meta name="twitter:description"
-          content="Midgard is a great place for me to get away from the stresses of college. -GeoPMel">
+          content="Midgard | We build nice things!">
     <meta name="twitter:creator" content="@midgardmc">
-    <meta name="twitter:image" content="http://www.midgardmc.com/images/social_media/twittercard-july.jpg">
+    <meta name="twitter:image" content="http://www.midgardmc.com/images/social_media/socialmedia.jpg">
     <!-- Open Graph data -->
     <meta property="og:title" content="Midgard"/>
     <meta property="og:type" content="article"/>
