--- a/rules.html
+++ b/rules.html
@@ -357,7 +357,7 @@
                     <li><a href="./status.html">Status</a></li>
                     <li>
                         <button class="serverurl hideonmobile"
-                                style=" border-style: none; background: none; margin: 0px !important; padding: 0px !important; color: #337ab7;"
+                                style=" border-style: none; background: none; margin: 0px !important; padding: 0px !important; color: #93C6D6;"
                                 data-toggle="tooltip" data-placement="right" title="Click to copy server URL"
                                 data-clipboard-text="mc.midgardmc.com">
                             Connect
