--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
             color: #5e5e5e;
         }
     </style>
+    <!--<script src="https://teletext.io/js/latest/txt-min.js"></script>
+    <script>
+        var options = {
+            id: "fc7e366d-4240-4dd1-aa03-93608b3926ee"
+        };
+        Txt.render(options);
+    </script>-->
 </head>
 <body>
 <div class="background"></div>
@@ -120,44 +127,6 @@
         </div>
     </div>
 </div>
-<div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-        <li data-target="#myCarousel" data-slide-to="3"></li>
-    </ol>
-
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
-        <div class="item active">
-            <img src="images/showcase_gallery_images/showcase1.png" alt="Images 1" width="460" height="345">
-        </div>
-
-        <div class="item">
-            <img src="images/showcase_gallery_images/showcase2.png" alt="Image 2" width="460" height="345">
-        </div>
-
-        <div class="item">
-            <img src="images/showcase_gallery_images/showcase3.png" alt="Image 3" width="460" height="345">
-        </div>
-
-        <div class="item">
-            <img src="images/showcase_gallery_images/showcase4.png" alt="Image 4" width="460" height="345">
-        </div>
-    </div>
-
-    <!-- Left and right controls -->
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
-</div>
 <div class="container-fluid custom-container-fluid-section">
     <h2 class="noletterspacing" style="font-size: 20px;">To play on Midgard you must have
         Minecraft PC / Mac Edition</h2>
@@ -176,7 +145,7 @@
                     <li><a href="./status.html">Status</a></li>
                     <li>
                         <button class="serverurl hideonmobile"
-                                style=" border-style: none; background: none; margin: 0px !important; padding: 0px !important; color: #337ab7;"
+                                style=" border-style: none; background: none; margin: 0px !important; padding: 0px !important; color: #93C6D6;"
                                 data-toggle="tooltip" data-placement="right" title="Click to copy server URL"
                                 data-clipboard-text="mc.midgardmc.com">
                             Connect
