--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <!-- Twitter Card data-->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@midgardmc">
-    <meta name="twitter:title" content="Midgard | We build nice things!">
+    <meta name="twitter:title" content="Midgard">
     <meta name="twitter:description"
-          content="Midgard is a great place for me to get away from the stresses of college. -GeoPMel">
+          content="We build nice things!">
     <meta name="twitter:creator" content="@midgardmc">
-    <meta name="twitter:image" content="http://www.midgardmc.com/images/social_media/twittercard-july.jpg">
+    <meta name="twitter:image" content="http://www.midgardmc.com/images/social_media/socialmedia.jpg">
     <!-- Open Graph data -->
     <meta property="og:title" content="Midgard"/>
     <meta property="og:type" content="article"/>
@@ -108,11 +108,11 @@
     <div class="container-fluid custom-container-fluid">
         <div class="quote-box">
             <div class="quote">
-                <h3>"Midgard is a great place for me to get away from the stresses of college."</h3>
-                <p style="padding-left: 10px;">GeoPMel <cite title="Member Since 2013">Member Since 2013</cite></p>
+                <h3>"Midgard is a great server full of cool builds and great people!"</h3>
+                <p style="padding-left: 10px;">KillerAvacado <cite title="Member Since 2016">Member Since 2016</cite></p>
             </div>
         </div>
-        <div class="row features" style="margin-top: 30px;">
+        <div class="row features" style="margin-top: 80px;">
             <div class="col-md-4"><i class="fa fa-shield fa-5x" aria-hidden="true"></i><h4>Experienced Team</h4>
                 <p>Midgard's has been around for 5 years with staff that's knowledgeable from server hardware to
                     Minecraft itself.</p></div>
@@ -127,7 +127,7 @@
         </div>
     </div>
 </div>
-<div class="container-fluid custom-container-fluid-section">
+<div class="container-fluid custom-container-fluid-section" style="margin-top: 80px;">
     <h2 class="noletterspacing" style="font-size: 20px;">To play on Midgard you must have
         Minecraft PC / Mac Edition</h2>
     <p class="noletterspacing">Midgard is running on the latest version of Minecraft PC
