--- a/status.html
+++ b/status.html
@@ -11,7 +11,8 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@midgardmc">
     <meta name="twitter:title" content="Midgard | Server Status">
-    <meta name="twitter:description" content="Midgard. We build nice things!">
+    <meta name="twitter:description"
+          content="We build nice things!">
     <meta name="twitter:creator" content="@midgardmc">
     <meta name="twitter:image" content="http://www.midgardmc.com/images/social_media/socialmedia.jpg">
     <!-- Open Graph data -->
