--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@
         </div><!--/.container-fluid -->
     </nav>
     <div class="container-fluid custom-container-fluid">
-        <div class="quote-box">
+         <!--<div class="quote-box">
             <div class="quote">
                 <h3>"Midgard is a great server full of cool builds and great people!"</h3>
                 <p style="padding-left: 10px;">KillerAvacado <cite title="Member Since 2016">Member Since 2016</cite></p>
             </div>
-        </div>
-        <div class="row features" style="margin-top: 80px;">
+        </div>-->
+        <div class="row features" style="margin-top: 90px;">
             <div class="col-md-4"><i class="fa fa-shield fa-5x" aria-hidden="true"></i><h4>Experienced Team</h4>
                 <p>Midgard's has been around for 5 years with staff that's knowledgeable from server hardware to
                     Minecraft itself.</p></div>
@@ -126,6 +126,9 @@
                 </p></div>
         </div>
     </div>
+</div>
+<div class="">
+
 </div>
 <div class="container-fluid custom-container-fluid-section" style="margin-top: 80px;">
     <h2 class="noletterspacing" style="font-size: 20px;">To play on Midgard you must have
