--- a/status.html
+++ b/status.html
@@ -58,7 +58,7 @@
     </style>
 </head>
 <body>
-<div class=" background-subpages background-about"></div>
+<div class=" background-subpages background-status"></div>
 <div class="background-gradient-subpages">
 </div>
 <nav class="navbar navbar-default">
