--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="logo">
                 <div class="logocolor hide"></div>
                 <h1 class="hide">Midgard</h1>
-                <p class="hide">a minecraft community</p>
+                <p class="hide">something new is coming</p>
             </div>
         </div>
     </section>
