--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#team">Team</a></li>
-                    <li><a href="#midgard-zoo">Midgard Zoo</a></li>
-                    <li><a href="#servers">Servers</a></li>
-                    <li><a href="http://mc.midgardmc.com:8123">DynMap</a></li>
+                    <li><a class="smooth" href="#about">About</a></li>
+                    <li><a class="smooth" href="#team">Team</a></li>
+                    <li><a class="smooth" href="#midgard-zoo">Midgard Zoo</a></li>
+                    <li><a class="smooth" href="#servers">Servers</a></li>
+                    <li><a class="smooth" href="http://mc.midgardmc.com:8123">DynMap</a></li>
                 </ul>
             </div><!--/.nav-collapse -->
         </div>
@@ -280,7 +280,7 @@
     $(document).ready(function () {
 
         // EVENT HANDLERS
-        $('nav a, #scroll-down').on('click', function (event) {
+        $('nav a .smooth, #scroll-down').on('click', function (event) {
             event.preventDefault();
 
 
