Added Team Member Names

--- a/index.html
+++ b/index.html
@@ -146,13 +146,17 @@
                         back end. And veteran players staffed in game. Midgard will make sure you're in good hands.
                     </p>
                 </div>
-                <div class="col-md-3">
+                <div class="team-members col-md-3">
                     <img src="https://minotar.net/avatar/ngtflyer" alt="ngtflyer" class="img-rounded">
+                    <p>NgtFlyer</p>
                     <img src="https://minotar.net/avatar/nullmatrix" alt="nullmatrix" class="img-rounded">
+                    <p>NullMatrix</p>
                 </div>
-                <div class="col-md-3">
+                <div class="team-members col-md-3">
                     <img src="https://minotar.net/avatar/spinnibbler" alt="spinnibbler" class="img-rounded">
+                    <p>SpinNibbler</p>
                     <img src="https://minotar.net/avatar/vantes" alt="vantes" class="img-rounded">
+                    <p>Vantes</p>
                 </div>
             </div>
         </div>
