--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <li><a class="smooth" href="#team">Team</a></li>
                     <li><a class="smooth" href="#midgard-zoo">Midgard Zoo</a></li>
                     <li><a class="smooth" href="#servers">Servers</a></li>
-                    <li><a class="smooth" href="http://mc.midgardmc.com:8123">DynMap</a></li>
+                    <li><a href="http://mc.midgardmc.com:8123">DynMap</a></li>
                 </ul>
             </div><!--/.nav-collapse -->
         </div>
@@ -284,7 +284,7 @@
     $(document).ready(function () {
 
         // EVENT HANDLERS
-        $('nav a .smooth, #scroll-down').on('click', function (event) {
+        $('.smooth, #scroll-down').on('click', function (event) {
             event.preventDefault();
 
 
