Added social link

--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
                     <div class="col-md-4">
                     </div>
                     <div class="col-md-4">
-                        <a href="#about" id="scroll-down"><span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span>
+                        <a href="#about" id="scroll-down"><span class="glyphicon glyphicon-chevron-down"
+                                                                aria-hidden="true"></span>
                         </a>
                     </div>
                     <div class="col-md-4">
@@ -236,6 +237,7 @@
             <ul>
                 <li><a href="mumble://mc.midgardmc.com">Mumble</a></li>
                 <li><a href="https://discord.gg/014TQwrNRaueX975o">Discord</a></li>
+                <li><a href="http://steamcommunity.com/groups/mcmidgard">Steam</a></li>
                 <li><a href="https://www.facebook.com/mcmidgard">Facebook</a></li>
                 <li><a href="https://twitter.com/intent/follow?&screen_name=midgardmc">Twitter</a></li>
                 <li><a href="https://www.reddit.com/r/MidgardMC/">Reddit</a></li>
