--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <![endif]-->
 </head>
 <body>
-<header>
+<header id="top">
     <nav class="navbar navbar-default navbar-fixed-top navbar-midgard">
         <div class="container">
             <div class="navbar-header">
@@ -41,7 +41,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Midgard</a>
+                <a class="navbar-brand smooth" href="#top">Midgard</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
@@ -252,8 +252,6 @@
     </div>
 </footer>
 </div>
-
-
 <!-- Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
@@ -274,6 +272,7 @@
         </div>
     </div>
 </div>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.easing.1.3.js"></script>
