--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <link href="css/reset.css" rel="stylesheet" type="text/css"/>
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <!-- Custom Styles-->
+    <!-- Custom Styles -->
     <link href="css/styles.css" rel="stylesheet">
-    <!-- Favicons-->
+    <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
@@ -142,7 +142,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h1>The Team</h1>
+                    <h1>Team</h1>
                     <p>Midgard is staffed by seasoned pros in the Minecraft space. With IT Professionals running the
                         back end. And veteran players staffed in game. Midgard will make sure you're in good hands.
                     </p>
