--- a/signshop.html
+++ b/signshop.html
@@ -22,6 +22,11 @@
 
     <style>
         body {
+            background-color: white;
+        }
+
+        .guidetitle {
+            background-color: #231f20;
             color: white;
         }
     </style>
@@ -44,9 +49,13 @@
     </nav>
 </header>
 <div class="content">
-    <div class="container">
+    <div class="guidetitle">
+        <div class="container">
         <h1>[How-To] Using Signshop</h1>
         <h2>Guide originally written by jesskitten</h2>
+        </div>
+    </div>
+    <div class="container">
         <div class="content">Note to mods: Here's my attempt at a guide. Don't feel obliged to have to use it! Also feel
             free to edit or cut it down a bit or whatever. :P<br><br><br>Hello! This is a screenshot
             tutorial of how to create the four basic and most common types of Signshop signs, <span
