--- a/signshop.html
+++ b/signshop.html
@@ -56,8 +56,7 @@
         </div>
     </div>
     <div class="container">
-        <div class="content">Note to mods: Here's my attempt at a guide. Don't feel obliged to have to use it! Also feel
-            free to edit or cut it down a bit or whatever. :P<br><br><br>Hello! This is a screenshot
+        <div class="content">Hello! This is a screenshot
             tutorial of how to create the four basic and most common types of Signshop signs, <span
                     style="color: #0040FF">[Buy]</span>, <span style="color: #0040FF">[Sell]</span>, <span
                     style="color: #0040FF">[Donate]</span> and <span style="color: #0040FF">[DonateHand]</span>.
@@ -216,7 +215,7 @@
             that. Similarly with half-stacks, though they're tougher to do as you need more of a source item. If you
             wanted to buy a half a stack of books, you could fill the rest of the chest with spare junk, and have a
             half-stack of books already in there so any sellers would only be able to fill up the rest of it before the
-            chest runs out of stock. <br><br>&lt;More coming -- suggest!&gt;<br><br><br>Hope that helps!
+            chest runs out of stock. <br>
         </div>
 
     </div>
