--- a/index.html
+++ b/index.html
@@ -47,9 +47,10 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li><a class="smooth" href="#about">About</a></li>
                     <li><a class="smooth" href="#team">Team</a></li>
-                    <li><a class="smooth" href="#midgard-zoo">Midgard Zoo</a></li>
+                    <li><a class="smooth" href="#midgard-zoo">Zoo</a></li>
                     <li><a class="smooth" href="#servers">Servers</a></li>
                     <li><a href="http://mc.midgardmc.com:8123">DynMap</a></li>
+                    <li class="active"><a data-toggle="modal" data-target="#myModal" role="button">Join Us</a></li>
                 </ul>
             </div><!--/.nav-collapse -->
         </div>
