--- a/index.html
+++ b/index.html
@@ -236,8 +236,8 @@
         <div class="col-md-3">
             <h3>Social</h3>
             <ul>
-                <li><a href="mumble://mc.midgardmc.com">Mumble</a></li>
-                <li><a href="https://discord.gg/014TQwrNRaueX975o">Discord</a></li>
+                <li><a href="#">Mumble (By Request Only)</a></li>
+                <li><a href="#">Discord (By Request Only)</a></li>
                 <li><a href="http://steamcommunity.com/groups/mcmidgard">Steam</a></li>
                 <li><a href="https://www.facebook.com/mcmidgard">Facebook</a></li>
                 <li><a href="https://twitter.com/intent/follow?&screen_name=midgardmc">Twitter</a></li>
