--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <li><a class="smooth" href="#midgard-zoo">Zoo</a></li>
                     <li><a class="smooth" href="#servers">Servers</a></li>
                     <li><a href="http://mc.midgardmc.com:8123">DynMap</a></li>
-                    <li class="active"><a data-toggle="modal" data-target="#myModal" role="button">Join Us</a></li>
+                    <li class="active"><a href="https://goo.gl/forms/CBCx3wDhFkyHfpPf1" role="button">Join Us</a></li>
                 </ul>
             </div><!--/.nav-collapse -->
         </div>
@@ -200,7 +200,7 @@
                                 <small>Survival 1.11.2</small>
                             </h2>
                             <p>Midgard's flagship Survival Minecraft server.</p>
-                            <a class="btn btn-default" data-toggle="modal" data-target="#myModal" role="button">Submit
+                            <a class="btn btn-default" href="https://goo.gl/forms/CBCx3wDhFkyHfpPf1">Submit
                                 Whitelist Request</a>
                         </div>
                     </div>
@@ -229,7 +229,7 @@
             <h3>Server Links</h3>
             <ul>
                 <li><a href="http://mc.midgardmc.com:8123">DynMap</a></li>
-                <li><a href="rules.html">Rules</a></li>
+                <li><a href="https://docs.google.com/document/d/1EFTXAGFpxewtfJz2Z84pFjjzoqI38OAehEI4YNLtsIM/edit?usp=sharing">Rules</a></li>
                 <li><p>Connect: mc.midgardmc.com</p></li>
             </ul>
         </div>
@@ -250,33 +250,12 @@
     </div>
 </footer>
 </div>
-<!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
-                        aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="myModalLabel">Whitelist Request</h4>
-            </div>
-            <div class="modal-body">
-                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeDZX6p3AtEO_881GNLVRczeaMKzOn5pkFKK3qanTh4waLfDg/viewform?embedded=true"
-                        frameborder="0" marginheight="0" marginwidth="0">Loading...
-                </iframe>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-            </div>
-        </div>
-    </div>
-</div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.easing.1.3.js"></script>
 <script>
     $('.carousel').carousel();
-    $('#myModal').modal(options);
 </script>
 <script type="text/javascript">
 
