--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     </nav>
 </header>
 <div class="content">
-    <div class="alert alert-info" role="alert"><div class="container"> Check out the brand new <a href="https://www.youtube.com/watch?v=SH-TKyPFoYE" class="alert-link">Zoo Cam!</a></div></div>
+    <div class="alert alert-info" role="alert"><div class="container"> Check out the brand new <a href="http://www.youtube.com/channel/UCtw4_2ahi3QpRFeWEMlJALg/live" class="alert-link">Zoo Cam!</a></div></div>
     <section id="feature-area">
         <div id="carousel-midgard" class="carousel slide" data-ride="carousel">
             <!-- Indicators -->
