--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li id="zoo-cam"><a href="http://www.youtube.com/channel/UCtw4_2ahi3QpRFeWEMlJALg/live">Zoo Cam
+                    <li id="zoo-cam"><a href="zoocam.html">Zoo Cam
                         <span class="glyphicon glyphicon-record" aria-hidden="true"></span> </a></li>
                     <li></li>
                 </ul>
