--- a/zoocam.html
+++ b/zoocam.html
@@ -20,9 +20,25 @@
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <style>
-        #redirect{
-            height: 100vh;
+        body {
+            background-color: #54341f;
+            color: white;
         }
+        iframe {
+            /*margin: 0 auto;*/
+            width: 100%;
+        }
+
+        .navbar-default {
+            background-color: #348f19;
+            color: white;
+        }
+
+        #zoocampage a {
+            color: white;
+            text-decoration: underline;
+        }
+
     </style>
 </head>
 <body>
@@ -37,9 +53,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand smooth" href="#top">
+                <a class="navbar-brand smooth" href="index.html">
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 viewBox="0 0 90.2 90.2" style="enable-background:new 0 0 90.2 90.2; width: 35px; fill: #ffffff" xml:space="preserve">
+	 viewBox="0 0 90.2 90.2" style="enable-background:new 0 0 90.2 90.2; width: 50px; fill: #ffffff" xml:space="preserve">
 <style type="text/css">
 	.st0 {
         fill: #ffffff;
@@ -62,12 +78,31 @@
 </g>
                 </a>
             </div>
+            <div id="navbar" class="navbar-collapse collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="https://goo.gl/forms/CBCx3wDhFkyHfpPf1" target="_blank">Visit the Zoo</a></li>
+                    <li id="zoo-cam"><a href="zoocam.html">Zoo Cam
+                        <span class="glyphicon glyphicon-record" aria-hidden="true"></span> </a></li>
+                    <li></li>
+                </ul>
+            </div><!--/.nav-collapse -->
         </div>
+
     </nav>
 </header>
 <div class="content">
-    <div class="container" id="redirect">
-        <h1>Redirecting...</h1>
+    <div class="container" id="zoocampage">
+        <h1>Zoo Cam</h1>
+        <p>Don't see a live video feed? Either we're offline or streaming to our <a href="https://www.youtube.com/channel/UCtw4_2ahi3QpRFeWEMlJALg/live">YouTube Channel</a>.</p>
+        <p>This feed is still in Beta. We're still finding the best solution to stream to.</p>
+        <div class="row">
+            <div class="col-md-12">
+                <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmcmidgard%2Fvideos%2F626860227505986%2F"
+                width="100%" height="700px" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
+                allowTransparency="true" allowFullScreen="true"></iframe>
+            </div>
+        </div>
+        </div>
     </div>
 </div>
 <footer>
@@ -101,7 +136,6 @@
 </div>
 
 
-
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.easing.1.3.js"></script>
@@ -129,7 +163,7 @@
 </script>
 
 <script>
-    window.location = "http://www.youtube.com/channel/UCtw4_2ahi3QpRFeWEMlJALg/live";
+    // window.location = "http://www.youtube.com/channel/UCtw4_2ahi3QpRFeWEMlJALg/live";
 </script>
 
 </body>
