--- a/index.html
+++ b/index.html
@@ -312,6 +312,7 @@
             <ul>
                 <li><a href="#">Mumble</a></li>
                 <li><a href="https://twitter.com/intent/follow?&screen_name=midgardmc">Twitter</a></li>
+                <li><a href="https://www.facebook.com/mcmidgard">Facebook</a></li>
                 <li><a href="https://www.reddit.com/r/MidgardMC/">Reddit</a></li>
                 <li><a href="https://github.com/MidgardMC">GitHub</a></li>
             </ul>
